# Hash-Folder

./: .gitignore  CNAME  ErrDialog.py  InstallDialog.py  MainUI.glade  README.md  aptInit.sh  change_port.py  clone.py  git-client  git-client.old  git-client.py  git-cloner  main.py  mainActivity.py  manifest.json  meson.build  org.htg.hashfolder.flatpakref  org.htg.hashfolder.json  run
.meson_tools/: file_scanner.py  resource_builder.py  run.py
old/.cache/: temp.json
old/.config/: accounts.json  app_config.json
py/: DialogEmail.py  DialogNewRepo.py  DialogSSH.py  HomePage.py  LoginPage.py  RepoListView.py  __init__.py  test.py  util.py  window.py
py/gtk3/: AppConfig.py  AppWindow.py  Application.py  DialogEmail.py  DialogNewRepo.py  DialogSSH.py  HomePage.py  LoginPage.py  portConfig.py  test.py  test.ui  test.ui~  test2.ui
py/gtk4/: AppWindow.py  Application.py  DialogEmail.py  DialogNewRepo.py  DialogSSH.py  HomePage.py  LoginPage.py  RepoListView.py  test.py  test.ui
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 012daacdff48558d1940cc97544db051ba5229070f023ac9ec78cf693ba98903-761efd507898b12136fa8cbf56ca0253aa12eb57c1f399dfadf0b5ce3cc3ecdc.delta  0cad72015ee27825b7bb5037d98a4ab97fe13c77727c5e33e29f2131e6ee304a-174e7cc2a822f29cdacec22471a20bbbe6c4071aeecb1fab42eb8035945000a4.delta  0cad72015ee27825b7bb5037d98a4ab97fe13c77727c5e33e29f2131e6ee304a-eb98a8161a500da957bf447071caf5584735e40e8ed5ef35a02c5e262c786548.delta  11c349243fa34de6458783a688ad34bfa382e62a9f16b42be8911db262ffb262-75b79cc8c0863d42a3513616661dd722abfcbf16f144ec832945b7f28df8771c.delta  13a69f44604345ea5c8f99d326f37cc385aaf862146018b48c77762a1d090f7f-34ec164385b9c267faccf5ab8913f048d30653e0cd7692313fba8ef32fd4fa72.delta  13a69f44604345ea5c8f99d326f37cc385aaf862146018b48c77762a1d090f7f-761efd507898b12136fa8cbf56ca0253aa12eb57c1f399dfadf0b5ce3cc3ecdc.delta  13d5b2249a2b37a57893fb8cc5f8d9ea681d99994df023898306fad8476dcd77-761efd507898b12136fa8cbf56ca0253aa12eb57c1f399dfadf0b5ce3cc3ecdc.delta  (+67 more)
src/: __init__.py  main.py
src/Hashtag/: ActionRow.py  Bin.py  CheckButtonRow.py  Clamp.py  EntryRowFocal.py  (+14 more)
(+110 files in other folders)
